[gd_scene load_steps=16 format=3 uid="uid://ckd7qlexbmgbt"]

[ext_resource type="Texture2D" uid="uid://b31ycnuo37x6n" path="res://Assets/tileset.png" id="1_1kyjy"]
[ext_resource type="Script" path="res://Scripts/mouse_controller.gd" id="1_c7uhv"]
[ext_resource type="Script" path="res://Scripts/save.gd" id="2_frr7w"]
[ext_resource type="Script" path="res://Scripts/day_night_system.gd" id="3_8i0gb"]
[ext_resource type="Texture2D" uid="uid://1iy7hvieusjh" path="res://Assets/plants.png" id="4_0qmvh"]
[ext_resource type="Texture2D" uid="uid://btqi2lo2bpgh2" path="res://Assets/king_duck_win_template.png" id="6_qw48u"]
[ext_resource type="Texture2D" uid="uid://bp3h0ek3egak4" path="res://Assets/book.png" id="6_sqktr"]
[ext_resource type="Script" path="res://Scripts/scenes_menager.gd" id="6_xxhrc"]
[ext_resource type="Script" path="res://Scripts/quest.gd" id="7_0on2x"]
[ext_resource type="Texture2D" uid="uid://dmo105wwgolj2" path="res://Assets/dialog.png" id="8_dgeai"]
[ext_resource type="Texture2D" uid="uid://b0rt2n8dvmty2" path="res://Assets/tools/s_to_move.png" id="10_5iec3"]
[ext_resource type="Texture2D" uid="uid://d3a6kwcwwbsc" path="res://Assets/tools/s_selecting.png" id="11_qmwl5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0j7xr"]
resource_name = "terrain"
texture = ExtResource("1_1kyjy")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
1:0/0/probability = 2.0
2:0/0 = 0
2:0/0/probability = 3.0
3:0/0 = 0
3:0/0/probability = 4.0
4:0/0 = 0
4:0/0/probability = 5.0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/probability = 2.0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
0:9/0/texture_origin = Vector2i(0, 7)
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_18qee"]
texture = ExtResource("4_0qmvh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0

[sub_resource type="TileSet" id="TileSet_rg8n0"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(32, 32)
custom_data_layer_0/name = "can_plow"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_0j7xr")
sources/1 = SubResource("TileSetAtlasSource_18qee")

[node name="game" type="Node2D"]
script = ExtResource("1_c7uhv")

[node name="save" type="Node2D" parent="."]
script = ExtResource("2_frr7w")

[node name="day,night system" type="Node2D" parent="."]
script = ExtResource("3_8i0gb")

[node name="Light" type="DirectionalLight2D" parent="day,night system"]
color = Color(0.176965, 0.0243131, 0.308414, 1)
energy = 0.3

[node name="Terrain" type="TileMap" parent="."]
texture_filter = 3
texture_repeat = 1
rotation = -0.00453355
tile_set = SubResource("TileSet_rg8n0")
format = 2
layer_0/name = "Terrain"
layer_1/name = "Pot"
layer_1/z_index = 1
layer_2/name = "Ground"
layer_2/z_index = 2
layer_3/name = "Plant"
layer_3/z_index = 3

[node name="MainCamera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="MainCamera"]
script = ExtResource("6_xxhrc")

[node name="HBoxContainer" type="HBoxContainer" parent="MainCamera/CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Coords" type="Label" parent="MainCamera/CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26

[node name="HBoxContainer2" type="HBoxContainer" parent="MainCamera/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Hour" type="Label" parent="MainCamera/CanvasLayer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer3" type="HBoxContainer" parent="MainCamera/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CenterMessage" type="Label" parent="MainCamera/CanvasLayer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 91

[node name="Book" type="Sprite2D" parent="MainCamera/CanvasLayer/HBoxContainer3"]
visible = false
texture_filter = 1
position = Vector2(164, 133)
scale = Vector2(2, 2)
texture = ExtResource("6_sqktr")

[node name="KingDuckWin" type="TextureRect" parent="MainCamera/CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -414.0
offset_top = -233.0
offset_right = 414.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_qw48u")
expand_mode = 1

[node name="Header" type="Label" parent="MainCamera/CanvasLayer/KingDuckWin"]
layout_mode = 0
offset_left = 42.0
offset_top = 49.0
offset_right = 425.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 58
text = "Title"

[node name="Content" type="Label" parent="MainCamera/CanvasLayer/KingDuckWin"]
layout_mode = 0
offset_left = 27.0
offset_top = 157.0
offset_right = 416.0
offset_bottom = 409.0
theme_override_font_sizes/font_size = 26
text = "Content"

[node name="Quest" type="HBoxContainer" parent="MainCamera/CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -71.0
offset_right = 389.0
grow_vertical = 0
script = ExtResource("7_0on2x")

[node name="Label" type="Label" parent="MainCamera/CanvasLayer/Quest"]
layout_mode = 2

[node name="Dialog" type="HBoxContainer" parent="MainCamera/CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Dialog" type="Sprite2D" parent="MainCamera/CanvasLayer/Dialog"]
texture_filter = 1
position = Vector2(0, -112.17)
scale = Vector2(4.405, 4.405)
texture = ExtResource("8_dgeai")

[node name="Content" type="Label" parent="MainCamera/CanvasLayer/Dialog/Dialog"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.363
offset_top = -36.7588
offset_right = 274.692
offset_bottom = 45.1112
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)

[node name="Image" type="Sprite2D" parent="MainCamera/CanvasLayer/Dialog/Dialog"]
texture_filter = 1
position = Vector2(-59, -1)
scale = Vector2(0.810855, 0.810855)

[node name="Tools" type="VBoxContainer" parent="MainCamera/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -119.0
offset_top = 16.0
offset_right = 20.0
offset_bottom = 196.0
grow_horizontal = 0
scale = Vector2(0.7, 0.7)

[node name="to_move" type="Button" parent="MainCamera/CanvasLayer/Tools"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
keep_pressed_outside = true
text = "Space"
icon = ExtResource("10_5iec3")
icon_alignment = 2

[node name="selecting" type="Button" parent="MainCamera/CanvasLayer/Tools"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
text = "1"
icon = ExtResource("11_qmwl5")
icon_alignment = 2

[connection signal="pressed" from="MainCamera/CanvasLayer/Tools/to_move" to="." method="_on_to_move_pressed"]
[connection signal="pressed" from="MainCamera/CanvasLayer/Tools/selecting" to="." method="_on_selecting_pressed"]
